--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
   height: 100vh;
-  background: red;
+  background: var(--bg-gradient);
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
@@ -11,9 +11,17 @@
 }
 .app__searchBar {
   border: none;
+  border-radius: 25px;
 }
 
 .app__pokeList {
   justify-self: stretch;
   background: var(--bg-color);
+}
+
+.colorful-border {
+  border-style: solid;
+  border-image-slice: 1;
+  border-width: 5px 0;
+  border-image-source: var(--bg-border);
 }
