--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,18 @@
 
 :root {
   --bg-color: #fff;
+
+  --bg-gradient: linear-gradient(
+    105deg,
+    rgba(184, 203, 237, 1) 0%,
+    rgba(222, 245, 221, 1) 100%
+  );
+
+  --bg-border: linear-gradient(
+    90deg,
+    rgba(124, 166, 252, 1) 0%,
+    rgba(119, 235, 129, 1) 100%
+  );
 }
 
 body {
